--- a/style.css
+++ b/style.css
@@ -241,8 +241,8 @@ nav ul li a:hover::after{
  }
  .work-list{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 40px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 20px;
     margin-top: 50px;
  }
 .Work{
@@ -255,8 +255,89 @@ nav ul li a:hover::after{
    margin-left: 50px;
    border-radius: 10px;
    display: block;
+   transition: transform 0.5s;
 }
+.layer{
+   width: 100%;
+   height: 0;
+   background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
+   border-radius: 10px;
+   position: absolute;
+   left: 0;
+   bottom: 0;
+   overflow: hidden;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   flex-direction: column;
+   padding: 0 40px;
+   text-align: center;
+   font-size: 14px;
+   transition: height 0.5s;
+}
+.layer h3{
+   font-weight: 500;
+   margin-bottom: 20px;
+}
+.layer a{
+   margin-top: 20px;
+   color: #ff004f;
+   text-decoration: none;
+   font-size: 18px;
+   line-height: 60px;
+   background-color: #fff;
+   width: 60px;
+   height: 60px;
+   border-radius: 50%;
+   text-align: center;
+}
+.Work:hover img{
+   transform: scale(1.1);
+}
+.Work:hover .layer{
+   height: 100%;
+}
+.btn{
+   display: block;
+   margin: 50px auto;
+   width: fit-content;
+   border: 1px #09ff00;
+   padding: 14px 50px;
+   border-radius: 7px;
+   text-decoration: none;
+   color: #fff;
+   transition: backgraund 0.5s;
+}
+.btn:hover{
+   background: #ff004f;
+}
+/*-----------contact--------*/
 
-
-  
+.contact-left{
+   flex-basis: 35%;
+}
+.contact-right{
+   flex-basis: 60%;
+}
+.contact-left p{
+   margin-top: 30px;
+}
+.contact-left p i{
+   color: #ff004f;
+   margin-right: 15px;
+   font-size: 25px;
+}
+.Social-icon{
+   margin-top: 30px;
+}
+.Social-icon a{
+   text-decoration: none;
+   font-size: 30px;
+   margin-right: 15px;
+   color: #ababab;
+   display: inline-block;
+}
+.Social-icon a:hover{
+   color: #ff004f;
+   transform: 2%}
 
