--- a/style.css
+++ b/style.css
@@ -336,8 +336,53 @@ nav ul li a:hover::after{
    margin-right: 15px;
    color: #ababab;
    display: inline-block;
+   transition: transform 05s;
 }
 .Social-icon a:hover{
    color: #ff004f;
-   transform: 2%}
+   transform: translateY(-5px);
+}
+.btn.bt2{
+   display: inline-block;
+   background: #ff004f;
+}
+.contact-right form{
+   width: 100%;
+}
+
+.contact-right .btn {
+   color: #080808;
+}
+
+form input,form textarea{
+   width: 100%;
+   border: 0;
+   outline: none;
+   background: #262626;
+   padding: 15px;
+   margin: 15px 0;
+   color: #fff;
+   font-size: 18px;
+   border-radius: 6px;
+}
+form .btn2{
+   padding: 14px 60px;
+   font-size: 18px;
+   margin-top: 20px;
+   cursor: pointer;
+}
+.copyright{
+   width: 100%;
+   text-align: center;
+   padding: 25px 0;
+   background: #262626;
+   font-weight: 300;
+   margin-top: 20px;
+}
+.copyright i{
+   color: #ff004f;
+}
+
+/*--------------css for small screen----------*/
+
 
