--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ nav ul li a:hover::after{
    display: inline-block;
    background: #ff004f;
 }
-.contact-right form{
+.contact-right .Form{
    width: 100%;
 }
 
@@ -354,7 +354,7 @@ nav ul li a:hover::after{
    color: #080808;
 }
 
-form input,form textarea{
+.Form input ,.Form textarea{
    width: 100%;
    border: 0;
    outline: none;
@@ -365,7 +365,7 @@ form input,form textarea{
    font-size: 18px;
    border-radius: 6px;
 }
-form .btn2{
+.Form .btn2{
    padding: 14px 60px;
    font-size: 18px;
    margin-top: 20px;
