--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ nav ul li a:hover::after{
    color: #080808;
 }
 
-.Form input ,.Form textarea{
+.Form .Input,.Form .Textarea{
    width: 100%;
    border: 0;
    outline: none;
